Fixed that Custom Endpoint title was always visible in the modal.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,6 @@ footer.text-center {
     margin-top: auto;
 }
 
-#custom-endpoint-input {
+#custom-endpoint-div {
     display: none;
 }
